--- a/src/style/main.less
+++ b/src/style/main.less
@@ -8,9 +8,9 @@
 @primary-1-color: @green-500;
 @primary-2-color: @green-700;
 @primary-3-color: @green-100;
-@accent-1-color: @brown-200;
-@accent-2-color: @brown-400;
-@accent-3-color: @brown-100;
+@accent-1-color: @blue-200;
+@accent-2-color: @blue-400;
+@accent-3-color: @blue-100;
 
 
  //
