add dummy data, remove home page

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -13,17 +13,17 @@
 @accent-3-color: @blue-100;
 
 
- //
- //.logo {
- //  cursor: pointer;
- //  .mui-font-style-headline;
- //  .mui-text-full-white;
- //  line-height: @app-bar-height;
- //  .mui-font-weight-light;
- //  background-color: @primary-1-color;
- //  padding-left: @desktop-gutter;
- //  padding-top: 0;
- //  margin-bottom: @desktop-gutter-mini;
- //}
+
+ .logo {
+   cursor: pointer;
+   .mui-font-style-headline;
+   .mui-text-full-white;
+   line-height: @app-bar-height;
+   .mui-font-weight-light;
+   background-color: @primary-1-color;
+   padding-left: @desktop-gutter;
+   padding-top: 0;
+   margin-bottom: @desktop-gutter-mini;
+ }
 
 @import "material-ui/components.less";
