--- a/src/views/LeaderboardView/style.less
+++ b/src/views/LeaderboardView/style.less
@@ -1,7 +1,13 @@
 .leaderboard-view {
-  // Feel free to add all your styles here.
-  //
-  // Since the styling language is not CSS, but LESS, you can nest all your
-  // styles here. For more info on LESS, please refer to
-  // http://lesscss.org/features/
+
+  table{
+    tr{
+      th{
+        text-transform: uppercase;
+        text-align: center;
+      }
+
+    }
+  }
+
 }
