--- a/src/style/main.less
+++ b/src/style/main.less
@@ -1,10 +1,6 @@
 @import "material-ui/scaffolding.less";
 
 // This is where you would optionally add your styles.
-
-// Feel free to leverage the styles below in order to implement the header in
-// the sidebar.
-
 @primary-1-color: @green-500;
 @primary-2-color: @green-700;
 @primary-3-color: @green-100;
@@ -13,6 +9,9 @@
 @accent-3-color: @blue-100;
 
 
+.mui-predefined-layout-1 .mui-app-content-canvas {
+  padding: 64px 22px;
+}
 
  .logo {
    cursor: pointer;
