add OAuth with google

--- a/src/pages/LeaderboardPage/style.less
+++ b/src/pages/LeaderboardPage/style.less
@@ -1,3 +1,14 @@
 .leaderboard-page {
 
+  .chatMessage{
+    padding: 6px 10px;
+  }
+
+  ul{
+    list-style: none;
+  }
+
+  li{
+    margin-bottom: 7px;
+  }
 }
