cleanup auth pages

--- a/src/pages/AuthPage/style.less
+++ b/src/pages/AuthPage/style.less
@@ -1,7 +1,9 @@
 .auth-page {
-  // Feel free to add all your styles here.
-  //
-  // Since the styling language is not CSS, but LESS, you can nest all your
-  // styles here. For more info on LESS, please refer to
-  // http://lesscss.org/features/
+
+  max-width: 300px;
+  text-align: center;
+  margin-top: 30px;
+  padding: 30px;
+  border: solid 1px lightgray;
+
 }
