--- a/src/views/ProfileView/style.less
+++ b/src/views/ProfileView/style.less
@@ -1,5 +1,11 @@
 .profile-view {
   img{
-    max-height: 200px;
+    max-height: 120px;
+    border-radius: 60px;
+    margin-bottom: 15px;
+  }
+
+  .signoutButton{
+    margin-top: 15px;
   }
 }
