chat styling items

--- a/src/views/ChatFormView/style.less
+++ b/src/views/ChatFormView/style.less
@@ -1,4 +1,13 @@
 .chatForm-view {
   padding: 10px 0;
   margin: 10px 0;
+
+  .mui-text-field{
+    width: 100%;
+  }
+
+  .mui-raised-button{
+    float: right;
+  }
+
 }
