--- a/src/views/ChatItemView/style.less
+++ b/src/views/ChatItemView/style.less
@@ -1,7 +1,17 @@
 .ChatItem-view {
-  // Feel free to add all your styles here.
-  //
-  // Since the styling language is not CSS, but LESS, you can nest all your
-  // styles here. For more info on LESS, please refer to
-  // http://lesscss.org/features/
+
+  margin-top: 12px;
+
+  h4{
+    padding-top: 3px;
+    margin-bottom: 10px;
+  }
+
+  .mui-paper-container{
+    padding: 10px;
+
+  }
+  .mui-flat-button{
+    float: right;
+  }
 }
